--- a/playbooks/database.yml
+++ b/playbooks/database.yml
@@ -1,6 +1,12 @@
 ---
-  - hosts: loadbalancer
+  - hosts: database
+    become: true
     tasks:
-      - name: install mysql-server 
+      - name: install mysql-server
         apt: name=mysql-server state=present update_cache=yes
+
+      - name: check the status mysql-server
+        service: name=mysql state=started enabled=yes
+
+
 
